--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3000
-CONNECTION_STRING=
+CONNECTION_STRING=mongodb://localhost:27017/ctf
 JWT_KEY=!6R0XjzFjx#ae)a$
 JWT_ALGORITHM=HS256
 JWT_EXPIRES=2 days
 JWT_ID=4=)KgR8(QG#$GVBD
+CRYPTO_KEY=ro!6R0XjzFjx-ae)6d
