facebook login basic

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ JWT_KEY=!6R0XjzFjx#ae)a$
 JWT_ALGORITHM=HS256
 JWT_EXPIRES=2 days
 CRYPTO_KEY=ro!6R0XjzFjx-ae)6d
+FB_APP_ID=1345498035859551
+FB_APP_SECRET=ff21ff780bca2d69d7850f4d50f9c0f6
