--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.3",
-    "@nestjs/passport": "^8.2.1",
+    "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "crypto-js": "^4.1.1",
@@ -34,6 +34,7 @@
     "mongoose": "^6.3.1",
     "node-emoji": "^1.11.0",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -50,6 +51,7 @@
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.0.0",
+    "@types/passport-facebook": "^2.1.11",
     "@types/supertest": "^2.0.11",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
