--- a/package.json
+++ b/package.json
@@ -84,5 +84,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "16.10.0",
+    "npm": "8.5.4"
   }
 }
