--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-CONNECTION_STRING=mongodb://localhost:27017/ctf
+CONNECTION_STRING=mongodb+srv://ctf:OeqSnAUV6Kn6dCG7@cluster0.9sxufux.mongodb.net/?retryWrites=true&w=majority
 JWT_KEY=!6R0XjzFjx#ae)a$
 JWT_ALGORITHM=HS256
 JWT_EXPIRES=2 days
