--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-CONNECTION_STRING=mongodb+srv://ctf:OeqSnAUV6Kn6dCG7@cluster0.9sxufux.mongodb.net/?retryWrites=true&w=majority
-JWT_KEY=!6R0XjzFjx#ae)a$
+CONNECTION_STRING=mongodb+srv://ctfuser:ggnv1ncTkVS0jTxn@ctf.qfidsnz.mongodb.net/ctf?retryWrites=true&w=majority
+JWT_KEY=!6R0XjzFjx7ae)a$
 JWT_ALGORITHM=HS256
 JWT_EXPIRES=2 days
 CRYPTO_KEY=ro!6R0XjzFjx-ae)6d
