reset-password partial

--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 PORT=3000
+API_URL=http://localhost:3000
+APP_URL=http://localhost:4200
 CONNECTION_STRING=mongodb+srv://ctfuser:ggnv1ncTkVS0jTxn@ctf.qfidsnz.mongodb.net/ctf?retryWrites=true&w=majority
 JWT_KEY=!6R0XjzFjx7ae)a$
 JWT_ALGORITHM=HS256
-JWT_EXPIRES=2 days
+JWT_EXPIRES=2d
 CRYPTO_KEY=ro!6R0XjzFjx-ae)6d
 FB_APP_ID=1345498035859551
 FB_APP_SECRET=ff21ff780bca2d69d7850f4d50f9c0f6
+MAILGUN_API_KEY=87d4f5e0d121900a88d39b6c5c3bbf1e-4dd50799-71725b40
+MAILGUN_DOMAIN=sandboxd79f1d8604f94015aa30d137efd37b10.mailgun.org
