--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.29.3",
     "mongoose": "^6.3.1",
     "node-emoji": "^1.11.0",
+    "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
