--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
     "handlebars": "^4.7.7",
     "mailgun.js": "^8.0.0",
@@ -51,12 +54,14 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.0.0",
     "@types/passport-facebook": "^2.1.11",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
