--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "copy-assets": "copyfiles ./assets/** ./dist"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/mongoose": "^9.0.3",
-    "@nestjs/passport": "^8.2.2",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -38,7 +38,7 @@
     "handlebars": "^4.7.7",
     "mailgun.js": "^8.0.0",
     "moment": "^2.29.3",
-    "mongoose": "^6.3.1",
+    "mongoose": "^6.5.3",
     "node-emoji": "^1.11.0",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
@@ -51,32 +51,33 @@
     "underscore": "^1.13.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "28.1.4",
+    "@types/node": "^16.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.1",
+    "@types/supertest": "^2.0.11",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^16.0.0",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-jwt": "^3.0.6",
-    "@types/supertest": "^2.0.11",
     "@types/underscore": "^1.11.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.30.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "28.1.2",
+    "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
+    "tsconfig-paths": "4.0.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
   "jest": {
