--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mailgun.js": "^8.0.0",
     "moment": "^2.29.3",
     "mongoose": "^6.5.3",
+    "multer": "^1.4.5-lts.1",
     "node-emoji": "^1.11.0",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
@@ -54,15 +55,16 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.4",
-    "@types/node": "^16.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/supertest": "^2.0.11",
+    "@types/express": "^4.17.13",
+    "@types/jest": "28.1.4",
     "@types/lodash": "^4.14.182",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^16.0.0",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-jwt": "^3.0.6",
+    "@types/supertest": "^2.0.11",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -71,13 +73,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
+    "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
   "jest": {
